fix loading icon alignment

--- a/src/dashboard/Apps/AppsIndex.scss
+++ b/src/dashboard/Apps/AppsIndex.scss
@@ -272,8 +272,9 @@
 }
 
 .loadingIcon {
-  width: 20px;
-  height: 20px;
+  display: inline-block;
+  width: 16px;
+  height: 16px;
   vertical-align: middle;
   @include animation('spin .75s linear infinite');
 }
